// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render schedule edit main area simple 1`] = `
<Main
  className="abc-duty-schedule-edit__main"
>
  <ta-title
    font="s"
    key="title"
    level={2}
    mix={
      Object {
        "block": "abc-duty-schedule-edit",
        "elem": "title",
      }
    }
    size="s"
  >
    abc-duty-schedule-edit:title
  </ta-title>
  <abc-text
    key="range"
    mix={
      Object {
        "block": "abc-duty-schedule-edit",
        "elem": "subtitle",
      }
    }
    muted="yes"
  >
    <Memo()
      end={2019-02-07T00:00:00.000Z}
      start={2019-02-01T00:00:00.000Z}
    />
  </abc-text>
  <abc-gap
    from={2010-02-05T00:00:00.000Z}
    fullDay={true}
    key="gap_10"
    to={2010-02-15T00:00:00.000Z}
    type="vacation"
    workInAbsence={false}
  />
  <ta-title
    font="xs"
    key="schedule_42"
    level={3}
    mix={
      Object {
        "block": "abc-duty-schedule-edit",
        "elem": "schedule-title",
      }
    }
    size="xs"
  >
    schedule1
  </ta-title>
  <abc-text
    key="schedule_42_shift_change"
    mix={
      Object {
        "block": "abc-duty-schedule-edit",
        "elem": "subtitle",
      }
    }
    muted="yes"
  >
    <Connect(ShiftChange)
      lowercase={true}
      scheduleId={42}
    />
  </abc-text>
  <abc-text
    mix={
      Object {
        "block": "abc-duty-schedule-edit",
        "elem": "info-message",
      }
    }
    muted="yes"
  >
    i18n:no-duty-on-holidays-message
  </abc-text>
  <abc-text
    mix={
      Object {
        "block": "abc-duty-schedule-edit",
        "elem": "info-message",
      }
    }
    muted="yes"
  >
    i18n:no-duty-on-weekends-message
  </abc-text>
  <Shift
    end={2010-02-10T00:00:00.000Z}
    id={1}
    isApproved={true}
    key="shift_1"
    onOpenShiftEditClick={[MockFunction]}
    problemsCount={1}
    start={2010-02-01T00:00:00.000Z}
  />
  <ta-title
    font="xs"
    key="schedule_146"
    level={3}
    mix={
      Object {
        "block": "abc-duty-schedule-edit",
        "elem": "schedule-title",
      }
    }
    size="xs"
  >
    schedule2
  </ta-title>
  <abc-text
    key="schedule_146_shift_change"
    mix={
      Object {
        "block": "abc-duty-schedule-edit",
        "elem": "subtitle",
      }
    }
    muted="yes"
  >
    <Connect(ShiftChange)
      lowercase={true}
      scheduleId={146}
    />
  </abc-text>
  <abc-text
    mix={
      Object {
        "block": "abc-duty-schedule-edit",
        "elem": "info-message",
      }
    }
    muted="yes"
  >
    i18n:no-duty-on-holidays-message
  </abc-text>
  <abc-text
    mix={
      Object {
        "block": "abc-duty-schedule-edit",
        "elem": "info-message",
      }
    }
    muted="yes"
  >
    i18n:no-duty-on-weekends-message
  </abc-text>
  <Shift
    end={2010-02-20T00:00:00.000Z}
    id={2}
    isApproved={false}
    key="shift_2"
    onOpenShiftEditClick={[MockFunction]}
    problemsCount={0}
    start={2010-02-11T00:00:00.000Z}
  />
</Main>
`;

exports[`Should render schedule edit main area with error 1`] = `
<Main
  className="abc-duty-schedule-edit__main"
>
  <Message
    type="error"
  >
    <Error
      data={
        Object {
          "detail": "Invalid input",
          "message": "",
        }
      }
    />
  </Message>
</Main>
`;

exports[`Should render schedule edit main area with messages about dutyOnHolidays && dutyOnWeekends 1`] = `
<Main
  className="abc-duty-schedule-edit__main"
>
  <ta-title
    font="s"
    key="title"
    level={2}
    mix={
      Object {
        "block": "abc-duty-schedule-edit",
        "elem": "title",
      }
    }
    size="s"
  >
    abc-duty-schedule-edit:title
  </ta-title>
  <abc-text
    key="range"
    mix={
      Object {
        "block": "abc-duty-schedule-edit",
        "elem": "subtitle",
      }
    }
    muted="yes"
  >
    <Memo()
      end={2019-02-07T00:00:00.000Z}
      start={2019-02-01T00:00:00.000Z}
    />
  </abc-text>
  <ta-title
    font="xs"
    key="schedule_42"
    level={3}
    mix={
      Object {
        "block": "abc-duty-schedule-edit",
        "elem": "schedule-title",
      }
    }
    size="xs"
  >
    schedule1
  </ta-title>
  <abc-text
    key="schedule_42_shift_change"
    mix={
      Object {
        "block": "abc-duty-schedule-edit",
        "elem": "subtitle",
      }
    }
    muted="yes"
  >
    <Connect(ShiftChange)
      lowercase={true}
      scheduleId={42}
    />
  </abc-text>
  <abc-text
    mix={
      Object {
        "block": "abc-duty-schedule-edit",
        "elem": "info-message",
      }
    }
    muted="yes"
  >
    i18n:no-duty-on-holidays-message
  </abc-text>
  <abc-text
    mix={
      Object {
        "block": "abc-duty-schedule-edit",
        "elem": "info-message",
      }
    }
    muted="yes"
  >
    i18n:no-duty-on-weekends-message
  </abc-text>
  <Shift
    end={2010-02-10T00:00:00.000Z}
    id={1}
    isApproved={true}
    key="shift_1"
    onOpenShiftEditClick={[MockFunction]}
    problemsCount={1}
    start={2010-02-01T00:00:00.000Z}
  />
</Main>
`;
